--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">Where Ya At</string>
 
+    <string name= "google_maps_key" translatable="false">
+        AIzaSyDbfKFKVeCM_VkdCWBdweJIqlvZSjPzsEE
+    </string>
+
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
@@ -13,4 +17,6 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="title_activity_location">Location</string>
+    <string name="title_activity_where_am_iat">WhereAmIAt</string>
 </resources>
