--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,9 @@
     <string name="fb_login_protocol_scheme">2321827204623063</string>
 
     <string name="title_activity_maps">Maps</string>
-
+    <string name="rank">Hot Locations</string>
+    <string name="friends">Friends</string>
+    
     <!-- Strings related to login -->
     <string name="loginTitle">Here\'s the big moment. Don\'t panic!</string>
 
